# S-expansion

./: README.md  Readme.md  Semigroup.py  main.py  pyproject.toml
semigroups/: semigroup.py  semigroup_loader.py  semigroup_operations.py  semigroups.py
semigroups/data/: order_2  order_3  order_4  order_5  order_6
semigroups/tests/: test_semigroup_loader.py
semigroups/utils/: semigroup_data_parser.py
